ADD_EXECUTABLE(collection USEOFSTLDATASTRUCTURES/P50709.cc)
ADD_EXECUTABLE(casino USEOFSTLDATASTRUCTURES/P40902.cc)
ADD_EXECUTABLE(collatz USEOFSTLDATASTRUCTURES/P69781.cc)
ADD_EXECUTABLE(bagwords USEOFSTLDATASTRUCTURES/P84415.cc)
ADD_EXECUTABLE(median USEOFSTLDATASTRUCTURES/P37064.cc)
ADD_EXECUTABLE(statistical USEOFSTLDATASTRUCTURES/P59282.cc)
ADD_EXECUTABLE(longest USEOFSTLDATASTRUCTURES/P69932.cc)
ADD_EXECUTABLE(role USEOFSTLDATASTRUCTURES/P60296.cc)
ADD_EXECUTABLE(game USEOFSTLDATASTRUCTURES/P60219.cc)
ADD_EXECUTABLE(ticket USEOFSTLDATASTRUCTURES/P62653.cc)