ADD_EXECUTABLE(collection USEOFSTLDATASTRUCTURES/P50709.cc)
ADD_EXECUTABLE(casino USEOFSTLDATASTRUCTURES/P40902.cc)
ADD_EXECUTABLE(collatz USEOFSTLDATASTRUCTURES/P69781.cc)
ADD_EXECUTABLE(bagwords USEOFSTLDATASTRUCTURES/P84415.cc)
ADD_EXECUTABLE(median USEOFSTLDATASTRUCTURES/P37064.cc)
ADD_EXECUTABLE(statistical USEOFSTLDATASTRUCTURES/P59282.cc)
ADD_EXECUTABLE(longest USEOFSTLDATASTRUCTURES/P69932.cc)
ADD_EXECUTABLE(role USEOFSTLDATASTRUCTURES/P60296.cc)
ADD_EXECUTABLE(game USEOFSTLDATASTRUCTURES/P60219.cc)
ADD_EXECUTABLE(ticket USEOFSTLDATASTRUCTURES/P62653.cc)
ADD_EXECUTABLE(kessim USEOFSTLDATASTRUCTURES/P63584.cc)
ADD_EXECUTABLE(BST Implementations/BST/mainBST.cc Implementations/BST/BST.cc)
ADD_EXECUTABLE(2 DIVIDECONQUER/1Exam/2.cc)
ADD_EXECUTABLE(RESISTANT DIVIDECONQUER/P33412.cc)
ADD_EXECUTABLE(FIXED DIVIDECONQUER/P34682.cc)
ADD_EXECUTABLE(MATRIX DIVIDECONQUER/P61833.cc)
ADD_EXECUTABLE(SUPERMERCAT COMPT-EXAM/P90861.cc)